# models/index.js
@@ -1,6 +1,6 @@
 const partsModel = require('./partsModel');
-const userModel = require('./userModel');
 const vehicleModel = require('./vehicleModel');
+const aftermarketCompaniesModel = require('./aftermarketCompaniesModel'); 
 const dbConfig = require('../utils');
 const mongoose = require('mongoose');
 mongoose.Promise = global.Promise;
@@ -8,13 +8,13 @@ mongoose.Promise = global.Promise;
 const db = {};
 db.mongoose = mongoose;
 db.url = dbConfig.url;
-db.users = require('./userModel')(mongoose);
 db.parts = require('./partsModel')(mongoose);
 db.vehicles = require('./vehicleModel')(mongoose);
+db.aftermarketCompanies = require('./aftermarketCompaniesModel')(mongoose); 
 
 module.exports = {
   db,
   partsModel,
-  userModel,
   vehicleModel,
+  aftermarketCompaniesModel, 
 };
