# routes/index.js
@@ -1,6 +1,7 @@
 const router = require('express').Router();
 router.use('/parts', require('./partsRoute'));
-router.use('/user', require('./userRoute'));
+router.use('/aftermarketComp', require('./aftermarketCompaniesRoute')); 
 router.use('/vehicle', require('./vehicleRoute'));
 
 module.exports = router;
+
